assets/css/style.css
/* ... */
.onoffswitchCluster1-checkbox:checked+.onoffswitchCluster1-label:before,
.onoffswitchCluster2-checkbox:checked+.onoffswitchCluster2-label:before,
.onoffswitchCluster3-checkbox:checked+.onoffswitchCluster3-label:before,
.onoffswitchCluster4-checkbox:checked+.onoffswitchCluster4-label:before,
.onoffswitchCluster5-checkbox:checked+.onoffswitchCluster5-label:before,
.onoffswitchFlows-checkbox:checked+.onoffswitchFlows-label:before {
  right: 2px;
}

.onoffswitchCluster1-checkbox:checked+.onoffswitchCluster1-label {
  background-color: #186da0;
}

.onoffswitchCluster1-checkbox:checked+.onoffswitchCluster1-label, .onoffswitchCluster1-checkbox:checked+.onoffswitchCluster1-label:before {
  border-color: #186da0;
}

.onoffswitchCluster2-checkbox:checked+.onoffswitchCluster2-label {
  background-color: #fff059;
}

.onoffswitchCluster2-checkbox:checked+.onoffswitchCluster2-label, .onoffswitchCluster2-checkbox:checked+.onoffswitchCluster2-label:before {
  border-color: #fff059;
}

.onoffswitchCluster3-checkbox:checked+.onoffswitchCluster3-label {
  background-color: #ffa372;
}

.onoffswitchCluster3-checkbox:checked+.onoffswitchCluster3-label, .onoffswitchCluster3-checkbox:checked+.onoffswitchCluster3-label:before {
  border-color: #ffa372;
}

.onoffswitchCluster4-checkbox:checked+.onoffswitchCluster4-label {
  background-color: #ed6663;
}

.onoffswitchCluster4-checkbox:checked+.onoffswitchCluster4-label, .onoffswitchCluster4-checkbox:checked+.onoffswitchCluster4-label:before {
  border-color: #ed6663;
}

.onoffswitchCluster5-checkbox:checked+.onoffswitchCluster5-label {
  background-color: #37a583;
}

.onoffswitchCluster5-checkbox:checked+.onoffswitchCluster5-label, .onoffswitchCluster5-checkbox:checked+.onoffswitchCluster5-label:before {
  border-color: #37a583;
}

.onoffswitchFlows-checkbox:checked+.onoffswitchFlows-label {
  background-color: black;
}

.onoffswitchFlows-checkbox:checked+.onoffswitchFlows-label, .onoffswitchFlows-checkbox:checked+.onoffswitchFlows-label:before {
  border-color: black;
}

#flowsLegend {
  display: none;
  position: absolute;
  z-index: 501;
  width: 15%;
  margin: 1% 2% 2% 30%;
  padding: 1%;
  border-radius: 10px;
  background: #1b262c;
}

#flowsLegend img {
  width: 100%;
}

#flowsPopup {
  visibility: hidden;
  position: absolute;
  z-index: 500;
  width: 30%;
  margin: 1% 2% 2% 47%;
  padding: 1%;
  border-radius: 10px;
  background: #1b262c;
  color: #fff3e0;
  font-family: Futura, sans-serif;
  font-size: 12px;
}

.flowsSwitch {
  margin: 0% 0% 12% 0%;
}

.DataSources {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 60px;
  padding: 0;
  background-color: #37a583;
}

.DataSourcesText {
  padding: 1%;
}

.DataSourcesText h4 {
  margin: 0;
  padding: 0;
  font-size: 12px;
}

.DataSourcesText a {
  font-size: 10px;
  text-decoration: none;
}

.DataSourcesText a:hover {
  color: #fff059;
  text-decoration: none;
}

/*--------------------------------------------------------------*/
/* STORY PAGE INTERACTIVE CHARTS */
/*--------------------------------------------------------------*/
.storyLinks a:hover {
  color: #fff059;
  text-decoration: none;
}
/* .storyLinks {
  margin-left:10%;
  margin-right:10%;
} */
.pieDescription{
  color:#fff3e0;
  TEXT-ALIGN: CENTER;
}

.tooltip {
  background: #eee;
  box-shadow: 0 0 5px #999999;
  color: #333;
  font-size: 12px;
  left: 130px;
  padding: 10px;
  position: absolute;
  text-align: center;
  top: 95px;
  width: 80px;
  z-index: 10;
  display: block;
  opacity: 0;
}

.tooltipUrban {
  background: #eee;
  box-shadow: 0 0 5px #999999;
  color: #333;
  font-size: 12px;
  left: 130px;
  padding: 10px;
  position: absolute;
  text-align: center;
  top: 95px;
  width: 80px;
  z-index: 10;
  display: block;
  opacity: 0;
}

.tooltipRural {
  background: #eee;
  box-shadow: 0 0 5px #999999;
  color: #333;
  font-size: 12px;
  left: 130px;
  padding: 10px;
  position: absolute;
  text-align: center;
  top: 95px;
  width: 80px;
  z-index: 10;
  display: block;
  opacity: 0;
}

.legend {
  font-size: 12px;
}

rect {
  cursor: pointer;
  /* NEW */
  stroke-width: 2;
}

rect.disabled {
  /* NEW */
  fill: transparent !important;
  /* NEW */
}

#chart {
  display: block;
  margin: auto;
  text-align: center;
}

.totalMSOATravel {
  margin-left: 10%;
  margin-right: 10%;
}

.totalTravelMSOAText {
  color: #fff3e0;
}

chart-container {
  position: relative;
}

.bar {
  fill: #1888d6;
  transition: all 150ms ease;
}

.bar:hover {
  fill: #09163d;
}

.axis--x path {
  visibility: hidden;
}

svg text {
  fill: #ffa372;
  font-family: Futura, sans-serif;
}

.msoaInfo svg text {
  fill: #fff3e0;
  font-family: Futura, sans-serif;
}

.background-style {
  background: #f1f2f3;
}

.tip {
  width: 3rem;
  background-color: #eee;
  text-align: center;
  box-shadow: 0px 2px 10px -2px #aaa;
  border: 2px solid #444;
  transition: all 160ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
}

.tip::after {
  content: ' ';
  position: absolute;
  bottom: -.5rem;
  left: 50%;
  margin-left: -.5rem;
  border-style: solid;
  border-width: .5rem .5rem 0 .5rem;
  border-color: #444 transparent transparent transparent;
}

.column {
  float: left;
  width: 33.33%;
  padding: 5px;
}

.peopleAndPublicTransportText {
  text-align: left;
  margin-right: 10%;
  margin-left: 10%;
  margin-top: 5%;
  color: #fff3e0;
}

/* Clearfix (clear floats) */
.row::after {
  content: '';
  clear: both;
  display: table;
}

.container {
  width: 50%;
  margin: 20px auto;
  margin-top: 5%;
}

.avgTransportTimeTitle {
  font-size: 40px;
  font-family: Futura, sans-serif;
  color: #fff3e0;
}

.storyTitle {
  font-size: 40px;
  font-family: futura;
  color: #fff3e0;
  margin-left: 10%;
}

.row {
  text-align: center;
  margin-top: 5%;
}

.transportTimeTitle {
  font-family: Futura, sans-serif;
}

.trainImage {
  width: 80%;
  margin-top: 36%;
}

.otherImage {
  width: 60%;
  margin-top: 18%;
}
/* ... */

